// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    viewing 
    1
     expense
     totalling 
    $94.34
  </h1>
</div>
`;

exports[`Should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    viewing 
    10
     expense
    s
     totalling 
    $5,240.90
  </h1>
</div>
`;
